gcc/testsuite/gm2/iso/fail/badparam3.def
DEFINITION MODULE badparam3 ;

PROCEDURE foo (c: CARDINAL) ;

END badparam3.
